# CodeBoarding-MCP

./: README.md  main.py  pyproject.toml  server.py
tools/: get_codebase_context.py  get_context_with_code.py  get_context_without_code.py
utils/: format.py  read_repo.py
