[project]
name = "mix-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastparquet>=2024.11.0",
    "mcp[cli]>=1.11.0",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
]